--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   async: ^2.4.0
   flutter_money_formatter: ^0.8.3
   intl: ^0.15.8
+  progress_dialog: ^1.2.2
 
 
 dev_dependencies:
