--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   flutter_money_formatter: ^0.8.3
   intl: ^0.15.8
   progress_dialog: ^1.2.2
+  rflutter_alert: ^1.0.3
 
 
 dev_dependencies:
