--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,13 +14,11 @@ description: A new Flutter application.
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.1.0 <3.0.0"
+  sdk: '>=2.1.0 <3.0.0'
 
 dependencies:
   flutter:
     sdk: flutter
-
-
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -32,19 +30,19 @@ dependencies:
   intl: ^0.15.8
   progress_dialog: ^1.2.2
   rflutter_alert: ^1.0.3
-
+  sqflite:
+  path_provider:
+  path:
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
 # The following section is specific to Flutter.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
@@ -52,7 +50,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-  - images/
+    - images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
@@ -66,12 +64,12 @@ flutter:
   # list giving the asset and other descriptors for the font. For
   # example:
   fonts:
-  - family: Muli
-    fonts:
-    - asset: fonts/Muli-VariableFont_wght.ttf
-  - family: SourceSansPro
-    fonts:
-    - asset: fonts/SourceSansPro-SemiBoldItalic.ttf
+    - family: Muli
+      fonts:
+        - asset: fonts/Muli-VariableFont_wght.ttf
+    - family: SourceSansPro
+      fonts:
+        - asset: fonts/SourceSansPro-SemiBoldItalic.ttf
   #       - asset: fonts/Schyler-Italic.ttf
   #         style: italic
   #   - family: Trajan Pro
